--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             console.log('Name: ' + profile.getName());
             console.log('Image URL: ' + profile.getImageUrl());
             console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+            // console.log('Password : '+profile.getPassword());
             var id_token = googleUser.getAuthResponse().id_token;
             // console.log(id_token);
             var xhr = new XMLHttpRequest();
