[se agrego comentario para el uso del servicio de imagenes]

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Ejemplo para mostrar imagenes usando nuestro servicio -->
+
+    <!-- <img src="http://localhost:1700/image/type/nameImg?token=123" alt=""> -->
+
+    <!-- /////////////////////////////////////////////////////// -->
+    
+    
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
